--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,4 @@
-bin_PYTHON = vlm-tool
-CLEANFILES = $(bin_PYTHON)
-EXTRA_DIST = config.rpath m4/ChangeLog  vlm-tool.py
+python_PYTHON = vlm-tool.py
 
-SUBDIRS =
-
-ACLOCAL_AMFLAGS = -I m4
+vars::
+	@echo 'VERSION=@VERSION@'
