--- a/configure.ac
+++ b/configure.ac
@@ -1,14 +1,18 @@
 #                                               -*- Autoconf -*-
 # Process this file with autoconf to produce a configure script.
 
+VERSION=1.0.0
 AC_PREREQ([2.66])
-AC_INIT([vlm-tool], [1.0.0], [Tommy.Reynolds@Oracle.com])
+AC_INIT([vlm-tool], [${VERSION}], [Tommy.Reynolds@Oracle.com])
 
 # Checks for programs.
 AC_PROG_AWK
 AC_PROG_INSTALL
 AC_PROG_LN_S
 AC_PROG_MAKE_SET
+AM_PATH_PYTHON
+AM_INIT_AUTOMAKE
+AC_SUBST(VERSION, ${VERSION})
 
 # Checks for libraries.
 
@@ -18,5 +22,5 @@ AC_PROG_MAKE_SET
 
 # Checks for library functions.
 
-AC_CONFIG_FILES([Makefile intl/Makefile po/Makefile.in])
+AC_CONFIG_FILES([Makefile vlm-tool.spec])
 AC_OUTPUT
