The VERSION macro does propagate down to the script.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,8 @@
+VERSION=@VERSION@
+
 python_PYTHON = vlm-tool.py
 
+EXTRA_DIST = autogen.sh
+
 vars::
-	@echo 'VERSION=@VERSION@'
+	@echo 'VERSION=${VERSION}'
