--- a/configure.ac
+++ b/configure.ac
@@ -1,9 +1,10 @@
 #                                               -*- Autoconf -*-
 # Process this file with autoconf to produce a configure script.
 
-VERSION=1.0.0
 AC_PREREQ([2.66])
-AC_INIT([vlm-tool], [${VERSION}], [Tommy.Reynolds@Oracle.com])
+
+VERSION="1.0.0"
+AC_INIT([vlm-tool], [1.0.0], [Tommy.Reynolds@Oracle.com])
 
 # Checks for programs.
 AC_PROG_AWK
@@ -12,7 +13,7 @@ AC_PROG_LN_S
 AC_PROG_MAKE_SET
 AM_PATH_PYTHON
 AM_INIT_AUTOMAKE
-AC_SUBST(VERSION, ${VERSION})
+AC_SUBST(VERSION)
 
 # Checks for libraries.
 
@@ -22,5 +23,5 @@ AC_SUBST(VERSION, ${VERSION})
 
 # Checks for library functions.
 
-AC_CONFIG_FILES([Makefile vlm-tool.spec])
+AC_CONFIG_FILES([Makefile vlm-tool.spec vlm-tool.py])
 AC_OUTPUT
