--- a/vlm-tool.spec.in
+++ b/vlm-tool.spec.in
@@ -13,8 +13,8 @@ Group         : User Interface/Desktops
 Source        : %{name}-%{version}.tar.gz
 BuildRoot     : %{_tmppath}/%{name}-%{version}-root
 BuildRequires : autoconf,automake
-%Requires     : python >= 2.6
-%BuildArch    : noarch
+Requires      : python >= 2.6
+BuildArch     : noarch
 
 %description
 Wholesome goodness
