--- a/vlm-tool.py.in
+++ b/vlm-tool.py.in
@@ -77,6 +77,7 @@ class	VlmTool( object ):
 		r'own address',
 		r'panic',
 		r'please',
+		r'power states',
 		r'qla.*loop',
 		r'rds/',
 		r'read-?only',
