--- a/vlm-tool.py.in
+++ b/vlm-tool.py.in
@@ -58,6 +58,7 @@ class	VlmTool( object ):
 		r'illegal:',
 		r'init:',
 		r'invalid:',
+		r'i?scsi',
 		r'kill',
 		r'link',
 		r'linux version',
@@ -84,7 +85,6 @@ class	VlmTool( object ):
 		r'register',
 		r'require',
 		r'restart',
-		r'scsi',
 		r'segfault',
 		r'selinux',
 		r'signal',
