Try to catch both "debug" and "bug".

--- a/vlm-tool.py.in
+++ b/vlm-tool.py.in
@@ -40,13 +40,13 @@ class	VlmTool( object ):
 		r'blocked for more',
 		r'becomes',
 		r'bond',
-		r'bug',
 		r'call trace:',
 		r'clocksource',
 		r'conflict',
 		r'crs',
 		r'css',
 		r'device-mapper',
+		r'(de)?bug',
 		r'dlm'
 		r'don\'t',
 		r'end_request',
