--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,15 @@ missing
 stamp-h1
 Makefile.in
 *.log
+.deps
+*.m4
+autom4te.cache
+config.h
+*~
+config.h.in
+config.status
+configure
+depcomp
+install-sh
+*.tar.gz
+*.spec
