--- a/configure.ac
+++ b/configure.ac
@@ -1,13 +1,10 @@
 #                                               -*- Autoconf -*-
 # Process this file with autoconf to produce a configure script.
 
-VERSION=v1.0.0
 AC_PREREQ([2.66])
-AC_INIT([vlm-tool], VERSION, [Tommy.Reynolds@MegaCoder.com])
+AC_INIT([vlm-tool], [1.0.0], [Tommy.Reynolds@MegaCoder.com])
 AC_CONFIG_SRCDIR([gcc-compat.h])
 AC_CONFIG_HEADERS([config.h])
-
-AC_SUBST(VERSION)
 
 AM_INIT_AUTOMAKE
 
