Object manipulation routines.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,10 +1,11 @@
 bin_PROGRAMS	= vlm-tool
 man_MANS	= vlm-tool.1
 
-vlm_tool_SOURCES = vlm-tool.c builtins.c builtins.h gcc-compat.h
+vlm_tool_SOURCES = vlm-tool.c builtins.c builtins.h gcc-compat.h pool.h pool.c
 
-AM_CFLAGS	=`getconf LFS_CFLAGS` -DVERSION=\"@VERSION@\" -I.
-AM_LDFLAGS	=`getconf LFS_LDFLAGS`
+AM_CFLAGS	=`getconf LFS_CFLAGS` -DVERSION=\"@VERSION@\" -I. -g -O0
+AM_LDFLAGS	=`getconf LFS_LDFLAGS` -g
 
 EXTRA_DIST=AUTHORS COPYING ChangeLog INSTALL NEWS README TODO autogen.sh \
 	   configure.ac install-sh missing vlm-tool.1 vlm-tool.spec.in
+
