Use the pool facilities.

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,7 +3,7 @@ man_MANS	= vlm-tool.1
 
 vlm_tool_SOURCES = vlm-tool.c builtins.c builtins.h gcc-compat.h pool.h pool.c
 
-AM_CFLAGS	=`getconf LFS_CFLAGS` -DVERSION=\"@VERSION@\" -I. -g -O0
+AM_CFLAGS	=-std=gnu99 `getconf LFS_CFLAGS` -DVERSION=\"@VERSION@\" -I. -g -O0 -Wall -Werror -pedantic
 AM_LDFLAGS	=`getconf LFS_LDFLAGS` -g
 
 EXTRA_DIST=AUTHORS COPYING ChangeLog INSTALL NEWS README TODO autogen.sh \
