--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,8 @@
 bin_PROGRAMS	= vlm-tool
 man_MANS	= vlm-tool.1
 
-vlm_tool_SOURCES = vlm-tool.c builtins.c builtins.h gcc-compat.h pool.h pool.c
+vlm_tool_SOURCES = vlm-tool.c builtins.c builtins.h gcc-compat.h pool.h pool.c \
+		   xprintf.h
 
 AM_CFLAGS	=-std=gnu99 `getconf LFS_CFLAGS` -DVERSION=\"@VERSION@\" -I. -g -O0 -Wall -Werror -pedantic
 AM_LDFLAGS	=`getconf LFS_LDFLAGS` -g
