--- a/Makefile.am
+++ b/Makefile.am
@@ -4,7 +4,7 @@ man_MANS	= vlm-tool.1
 vlm_tool_SOURCES = vlm-tool.c builtins.c builtins.h gcc-compat.h pool.h pool.c \
 		   xprintf.h
 
-AM_CFLAGS	=-std=gnu99 `getconf LFS_CFLAGS` -DVERSION=\"@VERSION@\" -I. -g -O0 -Wall -Werror -pedantic
+AM_CFLAGS	=-std=gnu99 `getconf LFS_CFLAGS` -DVERSION=\"@VERSION@\" -I. -Wall -Werror -pedantic -g
 AM_LDFLAGS	=`getconf LFS_LDFLAGS` -g
 
 EXTRA_DIST=AUTHORS COPYING ChangeLog INSTALL NEWS README TODO autogen.sh \
