Added '--with-pcre' flag.

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,10 +5,11 @@ vlm_tool_SOURCES = vlm-tool.c builtins.c builtins.h gcc-compat.h pool.h pool.c \
 		   xprintf.h
 
 AM_CFLAGS	=-std=gnu99 `getconf LFS_CFLAGS` -DVERSION=\"@VERSION@\" -I. -Wall -Werror -pedantic -g
-# AM_CFLAGS	+=`pcre-config --cflags-posix`
 AM_LDFLAGS	=`getconf LFS_LDFLAGS` -g
-# AM_LDFLAGS	+=`pcre-config --libs-posix`
 
 EXTRA_DIST=AUTHORS COPYING ChangeLog INSTALL NEWS README TODO autogen.sh \
 	   configure.ac install-sh missing vlm-tool.1 vlm-tool.spec.in
 
+vars::
+	@echo 'PCRE_CFLAGS=${PCRE_CFLAGS}'
+	@echo 'PCRE_LIBS=${PCRE_LIBS}'
