--- a/vlm-tool.spec.in
+++ b/vlm-tool.spec.in
@@ -1,3 +1,6 @@
+# Assume --without-pcre by default
+%{|?_with_pcre: %{|?_without_pcre: %define _without_pcre --without-pcre}}
+
 %define	ver	@VERSION@
 %define	rel	1
 %define	prefix	/usr
@@ -12,7 +15,7 @@ License       : GPLv2
 Group         : User Interface/Desktops
 Source        : %{name}-%{version}.tar.gz
 BuildRoot     : %{_tmppath}/%{name}-%{version}-root
-BuildRequires : autoconf,automake
+%{?_with_pcre:BuildRequires: pcre}
 
 %description
 The vlm-tool(1) reads one or more system log files (/var/log/messages) from
@@ -26,7 +29,7 @@ palatable by highlighting entries which could indicate an issue.
 
 %build
 	[ -f configure ] || ./autogen.sh
-	./configure
+	./configure %{?_with_pcre} %{?_without_pcre}
 	make
 
 %install
