Added version information to the man(1) page..

--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,7 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ([2.4])
-AC_INIT([vlm-tool], [1.0.5], [Tommy.Reynolds@MegaCoder.com])
+AC_INIT([vlm-tool], [1.0.6], [Tommy.Reynolds@MegaCoder.com])
 AC_CONFIG_SRCDIR([src/gcc-compat.h])
 AC_CONFIG_HEADERS([config.h])
 
@@ -25,11 +25,10 @@ AC_FUNC_MKTIME
 AC_FUNC_REALLOC
 AC_CHECK_FUNCS([memset regcomp strdup strrchr strtol strtoul])
 
-AX_PATH_LIB_PCRE
-
 AC_CONFIG_FILES([
 	 Makefile
 	 src/Makefile
+	 src/vlm-tool.1
 	 vlm-tool.spec
 ])
 AC_OUTPUT
