--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,7 +3,7 @@ man_MANS	= vlm-tool.1
 
 vlm_tool_SOURCES=builtins.c builtins.h gcc-compat.h pool.c pool.h      \
          post-process.c post-process.h vlm-tool.c vlm-tool.h xprintf.c \
-         xprintf.h x-funcs.h
+         xprintf.h x-funcs.h stanzas.h stanzas.c
 
 AM_CFLAGS	=-std=gnu99 `getconf LFS_CFLAGS` -DVERSION=\"@VERSION@\" -I. -Wall -Werror -pedantic -g
 AM_LDFLAGS	=`getconf LFS_LDFLAGS` -g -lm
