Include README.md

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
 SUBDIRS=src
 
-EXTRA_DIST=AUTHORS COPYING ChangeLog INSTALL NEWS README TODO autogen.sh \
+EXTRA_DIST=AUTHORS COPYING ChangeLog INSTALL NEWS README.md TODO autogen.sh \
 	   configure.ac install-sh missing
