--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,7 @@
 SUBDIRS=src
 
-EXTRA_DIST=AUTHORS COPYING ChangeLog INSTALL NEWS README.md TODO autogen.sh \
-	   configure.ac install-sh missing
+EXTRA_DIST=AUTHORS COPYING ChangeLog INSTALL NEWS README README.md     \
+         TODO autogen.sh configure.ac install-sh missing
+
+README: README.md
+	markdown2 <$< | lynx -dump -stdin >$@
