--- a/vlm-tool.spec.in
+++ b/vlm-tool.spec.in
@@ -27,6 +27,8 @@ palatable by highlighting entries which could indicate an issue.
 	[ -f configure ] || ./autogen.sh
 	./configure --prefix=$RPM_BUILD_ROOT%{prefix}
 	make
+	rm -f README
+	make README
 
 %install
 	rm -rf %{buildroot}
@@ -42,7 +44,7 @@ palatable by highlighting entries which could indicate an issue.
 %doc ChangeLog
 %doc INSTALL
 %doc NEWS
-%doc README
+%doc README README.md README.html
 %{_bindir}/vlm-tool
 %{_mandir}/man1/vlm-tool.1*
 
