Fleshed out man(1) page.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,8 @@
 SUBDIRS=src
 
-EXTRA_DIST=AUTHORS COPYING ChangeLog INSTALL NEWS README README.md     \
-	 README.html TODO autogen.sh configure.ac install-sh missing
+EXTRA_DIST=AUTHORS COPYING ChangeLog INSTALL NEWS README README.md     	\
+	 README.html TODO autogen.sh configure.ac install-sh missing	\
+	 vlm-tool.1
 
 .PHONY:	.FORCE
 
