--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,32 @@ dkms.conf
 # Added from https://raw.githubusercontent.com/github/gitignore/master/C.gitignore
 *.i*86
 *.mod*
+# Added from https://raw.githubusercontent.com/github/gitignore/master/Autotools.gitignore
+Makefile.in
+/ar-lib
+/mdate-sh
+/py-compile
+/test-driver
+/ylwrap
+autom4te.cache
+/autoscan.log
+/aclocal.m4
+/compile
+/config.guess
+/config.h.in
+/config.log
+/config.status
+/config.sub
+/configure
+/configure.scan
+/depcomp
+/install-sh
+/missing
+/stamp-h1
+/ltmain.sh
+/texinfo.tex
+m4/libtool.m4
+m4/ltoptions.m4
+m4/ltsugar.m4
+m4/ltversion.m4
+m4/lt~obsolete.m4
