Ship "README.md" and forget the silly plaintext or HTML version.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,12 +1,9 @@
 SUBDIRS=src
 
-EXTRA_DIST=AUTHORS COPYING ChangeLog INSTALL NEWS README README.md	\
-	 README.html TODO autogen.sh configure.ac install-sh missing	\
+EXTRA_DIST=AUTHORS COPYING ChangeLog INSTALL NEWS README.md		\
+	 TODO autogen.sh configure.ac install-sh missing		\
 	 vlm-tool.1 vlm-tool.spec
 
 .PHONY:	.FORCE
-
-README README.html: README.md .FORCE
-	markdown_py <README.md | tee README.html | lynx -dump -stdin >README
 
 man_MANS = vlm-tool.1
