--- a/vlm-tool.spec.in
+++ b/vlm-tool.spec.in
@@ -12,7 +12,6 @@ License       : GPLv2
 Group         : User Interface/Desktops
 Source        : %{name}-%{version}.tar.gz
 BuildRoot     : %{_tmppath}/%{name}-%{version}-root
-BuildRequires : lynx python2-markdown
 
 %description
 The vlm-tool(1) reads one or more system log files (/var/log/messages) from
@@ -30,8 +29,6 @@ For example, suppose one node of a five-server cluster starts having I/O issues 
 	[ -f configure ] || ./autogen.sh
 	./configure --prefix=$RPM_BUILD_ROOT%{prefix}
 	make
-	rm -f README
-	make README
 
 %install
 	rm -rf %{buildroot}
@@ -47,7 +44,7 @@ For example, suppose one node of a five-server cluster starts having I/O issues 
 %doc ChangeLog
 %doc INSTALL
 %doc NEWS
-%doc README README.md README.html
+%doc README.md
 %{_bindir}/vlm-tool
 %{_mandir}/man1/vlm-tool.1.gz
 
