--- a/configure.ac
+++ b/configure.ac
@@ -2,19 +2,22 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ([2.4])
-AC_INIT([vlm-tool], [2.2.27], [Tommy.Reynolds@MegaCoder.com])
+AC_INIT([vlm-tool], [2.2.28], [Tommy.Reynolds@MegaCoder.com])
 AC_CONFIG_SRCDIR([src/gcc-compat.h])
-AC_CONFIG_HEADERS([config.h])
 
-AM_INIT_AUTOMAKE
+# AM_GNU_GETTEXT_VERSION([0.0.0])
+
+AM_INIT_AUTOMAKE([ 1.12 -Wall -Werror ])
 
 # Checks for programs.
 AC_PROG_CC
 AC_PROG_INSTALL
 
+
 # Checks for libraries.
 
 # Checks for header files.
+AC_CONFIG_HEADERS([config.h])
 AC_CHECK_HEADERS([limits.h malloc.h stdlib.h string.h unistd.h])
 
 # Checks for typedefs, structures, and compiler characteristics.
