--- a/vlm-tool.spec.in
+++ b/vlm-tool.spec.in
@@ -42,7 +42,7 @@ For example, suppose one node of a five-server cluster starts having I/O issues 
 %doc ChangeLog
 %doc INSTALL
 %doc NEWS
-%doc README.md
+%doc README.md README.html README
 %{_bindir}/vlm-tool
 %{_mandir}/man1/vlm-tool.1.gz
 
