--- a/vlm-tool.spec.in
+++ b/vlm-tool.spec.in
@@ -13,6 +13,7 @@ Group         : User Interface/Desktops
 Source        : %{name}-%{version}.tar.gz
 BuildRoot     : %{_tmppath}/%{name}-%{version}-root
 BuildRequires : pandoc
+BuildRequires : gcc
 
 %description
 The vlm-tool(1) reads one or more system log files (/var/log/messages) from one or more systems.  The entries are filtered against a known set of trigger patterns.  Those entries which are matched, are then sorted and printed.
